# image-vault

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.cursor/: rules.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  image_commands.rs
src-tauri/src/db/: database.rs
src-tauri/src/models/: image.rs  mod.rs  sync_folder.rs
src-tauri/src/utils/: file_utils.rs  image_utils.rs  mod.rs  path_utils.rs
src/components/: add-button.tsx  add-image-modal.tsx  image-modal.tsx  image.tsx  toast.tsx
src/types/: image.ts
