[package]
name = "imagevault"
version = "0.0.1"
description = "A Tauri App"
authors = ["Ali Zaghloul"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imagevault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
base64 = "0.22.1"
chrono = "0.4.42"
arboard = "3.6.1"
image = "0.25.8"
reqwest = "0.12.23"
regex = "1.11.2"
